// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`planet info functionality when active renders component 1`] = `
<styled.tr
  active={true}
>
  <styled.i
    className="far fa-window-close"
  />
  <styled.header>
     planet details
    <hr />
  </styled.header>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        rotation period: 
      </p>
      <p>
        orbital period: 
      </p>
      <p>
        diameter: 
      </p>
      <p>
        climate: 
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        films:
        <ComposedComponent
          function={
            Object {
              "title": "title1",
            }
          }
        />
        <ComposedComponent
          function={
            Object {
              "title": "title2",
            }
          }
        />
        <ComposedComponent
          function={
            Object {
              "title": "title3",
            }
          }
        />
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        residents:
        <ComposedComponent
          function={
            Object {
              "name": "resident1",
            }
          }
        />
        <ComposedComponent
          function={
            Object {
              "name": "resident2",
            }
          }
        />
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        surface water: 
      </p>
      <p>
        population: 
      </p>
      <p>
        terrain: 
      </p>
      <p>
        gravity: 
      </p>
    </div>
  </div>
</styled.tr>
`;

exports[`planet info functionality when disabled renders component 1`] = `
<styled.tr
  active={false}
>
  <styled.i
    className="far fa-window-close"
  />
  <styled.header>
     planet details
    <hr />
  </styled.header>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        rotation period: 
      </p>
      <p>
        orbital period: 
      </p>
      <p>
        diameter: 
      </p>
      <p>
        climate: 
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        films:
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        residents:
      </p>
    </div>
    <div
      style={
        Object {
          "margin": "1rem",
        }
      }
    >
      <p>
        surface water: 
      </p>
      <p>
        population: 
      </p>
      <p>
        terrain: 
      </p>
      <p>
        gravity: 
      </p>
    </div>
  </div>
</styled.tr>
`;
